--- a/data/templates/ContainerLogoBox.glade
+++ b/data/templates/ContainerLogoBox.glade
@@ -2,12 +2,12 @@
 <!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <template class="BoxesWidgetsContainerLogo" parent="GtkOverlay">
+  <template class="BoxesWidgetsContainerLogoBox" parent="GtkOverlay">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <signal name="button-release-event" handler="on_button_release_event" swapped="no"/>
     <child>
-      <object class="GtkImage" id="logo">
+      <object class="GtkImage" id="logo_image">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="resource">/com/github/marbetschar/boxes/os/linux.svg</property>
