--- a/data/ui/BoxesWidgetsContainerLogoBox.glade
+++ b/data/ui/BoxesWidgetsContainerLogoBox.glade
@@ -5,11 +5,19 @@
   <template class="BoxesWidgetsContainerLogoBox" parent="GtkOverlay">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
+    <property name="halign">center</property>
+    <property name="valign">center</property>
     <signal name="button-release-event" handler="on_button_release_event" swapped="no"/>
     <child>
       <object class="GtkImage" id="logo_image">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="halign">center</property>
+        <property name="valign">center</property>
+        <property name="margin_left">6</property>
+        <property name="margin_right">12</property>
+        <property name="margin_top">6</property>
+        <property name="margin_bottom">6</property>
         <property name="resource">/com/github/marbetschar/boxes/os/linux.svg</property>
       </object>
       <packing>
