--- a/data/styles/Application.css
+++ b/data/styles/Application.css
@@ -19,4 +19,4 @@
 * Authored by: Marco Betschart <boxes@marco.betschart.name>
 */
 
-@define-color accent_color #a56de2;
+@define-color colorAccent #a56de2;
