--- a/data/ui/MainWindow.glade
+++ b/data/ui/MainWindow.glade
@@ -27,7 +27,7 @@
         <child>
           <object class="GtkScrolledWindow">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
+            <property name="can_focus">False</property>
             <property name="hscrollbar_policy">never</property>
             <property name="shadow_type">in</property>
             <child>
@@ -52,8 +52,8 @@
               <object class="GtkButton">
                 <property name="label" translatable="yes">Add Container…</property>
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
+                <property name="can_focus">False</property>
+                <property name="receives_default">False</property>
                 <property name="margin_left">3</property>
                 <property name="margin_right">3</property>
                 <property name="margin_top">3</property>
@@ -73,8 +73,8 @@
               <object class="GtkButton" id="remove_button">
                 <property name="visible">True</property>
                 <property name="sensitive">False</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
+                <property name="can_focus">False</property>
+                <property name="receives_default">False</property>
                 <property name="margin_left">3</property>
                 <property name="margin_right">3</property>
                 <property name="margin_top">3</property>
