--- a/data/ui/MainWindow.glade
+++ b/data/ui/MainWindow.glade
@@ -12,7 +12,7 @@
     <property name="can_focus">False</property>
     <property name="icon_name">edit-delete-symbolic</property>
   </object>
-  <template class="BoxesMainWindow" parent="GtkApplicationWindow">
+  <template class="TinsMainWindow" parent="GtkApplicationWindow">
     <property name="can_focus">False</property>
     <property name="type_hint">dialog</property>
     <property name="show_menubar">False</property>
