--- a/data/ui/AddContainerAssistant.glade
+++ b/data/ui/AddContainerAssistant.glade
@@ -286,7 +286,6 @@
             <property name="can_focus">False</property>
             <property name="halign">start</property>
             <property name="valign">center</property>
-            <property name="margin_bottom">24</property>
             <property name="label" translatable="yes">Stay tuned, your new container will be ready in just a few seconds:</property>
             <property name="wrap">True</property>
             <property name="max_width_chars">50</property>
@@ -310,10 +309,10 @@
               </object>
             </child>
             <child>
-              <object class="GtkImage" id="progress_warning_image">
+              <object class="GtkImage" id="progress_error_image">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="resource">/com/github/marbetschar/tins/actions/warning@assistant.svg</property>
+                <property name="resource">/com/github/marbetschar/tins/actions/error@assistant.svg</property>
                 <property name="icon_size">0</property>
               </object>
               <packing>
@@ -336,6 +335,7 @@
               <object class="GtkBox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="valign">start</property>
                 <property name="orientation">vertical</property>
                 <child>
                   <object class="GtkSpinner" id="progress_spinner">
@@ -343,6 +343,7 @@
                     <property name="height_request">18</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="margin_top">12</property>
                     <property name="margin_bottom">8</property>
                     <property name="active">True</property>
                   </object>
@@ -373,7 +374,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="progress_warning_label">
+              <object class="GtkLabel" id="progress_error_label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="valign">start</property>
@@ -402,6 +403,12 @@
         <property name="page_type">summary</property>
         <property name="has_padding">False</property>
       </packing>
+    </child>
+    <child>
+      <placeholder/>
+    </child>
+    <child>
+      <placeholder/>
     </child>
     <child>
       <placeholder/>
